add image column on slider table
