# docs/swagger.json
@@ -1448,6 +1448,11 @@
         },
         "/slider/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new slider",
                 "consumes": [
                     "multipart/form-data"
